--- a/layouts/navbarSdebar.html
+++ b/layouts/navbarSdebar.html
@@ -83,15 +83,23 @@
                   </svg>
                 </button>
 
-                <div class="relative">
-                  <button class="flex items-center space-x-2 relative focus:outline-none">
+                <div x-data="{ dropdownOpen: false }" class="relative">
+                  <button @click="dropdownOpen = ! dropdownOpen" class="flex items-center space-x-2 relative focus:outline-none">
                     <h2 class="text-gray-700 text-sm hidden sm:block">Super Admin</h2>
                       <img class="h-9 w-9 rounded-full border-2 border-purple-500 object-cover"
                       src="https://images.unsplash.com/photo-1553267751-1c148a7280a1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
                       alt="Your avatar">
                   </button>
 
-                  <div class="absolute right-0 mt-2 w-48 bg-white rounded-md overflow-hidden shadow-xl z-10">
+                  <div class="absolute right-0 mt-2 w-48 bg-white rounded-md overflow-hidden shadow-xl z-10"
+                    x-show="dropdownOpen"
+                    x-transition:enter="transition ease-out duration-100 transform"
+                    x-transition:enter-start="opacity-0 scale-95"
+                    x-transition:enter-end="opacity-100 scale-100"
+                    x-transition:leave="transition ease-in duration-75 transform"
+                    x-transition:leave-start="opacity-100 scale-100"
+                    x-transition:leave-end="opacity-0 scale-95"
+                    @click.away="dropdownOpen = false">
                     <a href="#"
                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-purple-600 hover:text-white">Profile</a>
                     <a href="#"
