--- a/layouts/navbarSdebar.html
+++ b/layouts/navbarSdebar.html
@@ -12,12 +12,12 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
   <body class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
     <div>
-      <div>
+      <div x-data="{ sidebarOpen: false }">
         <div class="flex h-screen bg-gray-100 font-roboto">
-          <div class="fixed z-20 inset-0 bg-black opacity-50 lg:hidden"></div>
+          <div :class="sidebarOpen ? 'block' : 'hidden'" @click="sidebarOpen = false" class="fixed z-20 inset-0 bg-black opacity-50 lg:hidden"></div>
 
           <!-- Sidebar -->
-          <div class="fixed z-30 inset-y-0 left-0 w-60 bg-white overflow-y-auto">
+          <div :class="sidebarOpen ? 'translate-x-0 ease-out' : '-translate-x-full ease-in'" class="fixed z-30 inset-y-0 left-0 w-56 transition duration-300 transform bg-white overflow-y-auto lg:translate-x-0 lg:static lg:inset-0">
             <div class="flex items-center justify-center mt-8">
               <div class="flex items-center">
                 <span class="text-gray-800 text-2xl font-semibold">Dashboard</span>
@@ -43,7 +43,7 @@
             <!-- Navbar -->
             <header class="flex justify-between items-center p-6">
               <div class="flex items-center space-x-4 lg:space-x-0">
-                <button class="text-gray-500 focus:outline-none lg:hidden">
+                <button @click="sidebarOpen = true" class="text-gray-500 focus:outline-none lg:hidden">
                   <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M4 6H20M4 12H20M4 18H11" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round" />
@@ -56,7 +56,7 @@
               </div>
 
               <div class="flex items-center space-x-4">
-                <button class="flex text-gray-600 focus:outline-none" aria-label="Color Mode">
+                <button class="flex text-gray-600 focus:outline-none">
                   <svg x-show="darkMode" class="h-6 w-6" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd"
                     d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
@@ -67,7 +67,7 @@
                   </svg>
                 </button>
 
-                <button class="flex text-gray-600 dark:text-gray-300 focus:outline-none">
+                <button class="flex text-gray-600 focus:outline-none">
                   <svg class="h-5 w-5" viewBox="0 0 24 24" fill="none">
                     <path
                     d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z"
@@ -75,7 +75,7 @@
                   </svg>
                 </button>
                 
-                <button class="flex text-gray-600 dark:text-gray-300 focus:outline-none">
+                <button class="flex text-gray-600 focus:outline-none">
                   <svg class="h-5 w-5" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                     d="M15 17H20L18.5951 15.5951C18.2141 15.2141 18 14.6973 18 14.1585V11C18 8.38757 16.3304 6.16509 14 5.34142V5C14 3.89543 13.1046 3 12 3C10.8954 3 10 3.89543 10 5V5.34142C7.66962 6.16509 6 8.38757 6 11V14.1585C6 14.6973 5.78595 15.2141 5.40493 15.5951L4 17H9M15 17V18C15 19.6569 13.6569 21 12 21C10.3431 21 9 19.6569 9 18V17M15 17H9"
@@ -114,7 +114,7 @@
             <!-- Contenido -->
             <main class="flex-1 overflow-x-hidden overflow-y-auto">
               <div class="container mx-auto px-6 py-8">
-                <div class="grid place-items-center h-96 text-gray-500 dark:text-gray-300 text-xl">
+                <div class="grid place-items-center h-96 text-gray-500 text-xl">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque id dignissimos sapiente dolore tempore commodi sequi aliquam similique exercitationem nemo nostrum cupiditate, laudantium debitis adipisci facere explicabo distinctio vitae maxime voluptas et repellat magni. Odit nihil placeat similique aperiam sunt? Vitae, aliquam architecto voluptate exercitationem amet deserunt recusandae harum quam!
 
                     <p>
