--- a/layouts/navbarSdebar.html
+++ b/layouts/navbarSdebar.html
@@ -14,10 +14,10 @@
     <div>
       <div x-data="{ sidebarOpen: false }">
         <div class="flex h-screen bg-gray-100 font-roboto">
-          <div :class="sidebarOpen ? 'block' : 'hidden'" @click="sidebarOpen = false" class="fixed z-20 inset-0 bg-black opacity-50 lg:hidden"></div>
+          <div :class="sidebarOpen ? 'block' : 'hidden'" @click="sidebarOpen = false" class="fixed z-20 inset-0 bg-black opacity-50 xl:hidden"></div>
 
           <!-- Sidebar -->
-          <div :class="sidebarOpen ? 'translate-x-0 ease-out' : '-translate-x-full ease-in'" class="fixed z-30 inset-y-0 left-0 w-56 transition duration-300 transform bg-white overflow-y-auto lg:translate-x-0 lg:static lg:inset-0">
+          <div :class="sidebarOpen ? 'translate-x-0 ease-out' : '-translate-x-full ease-in'" class="fixed z-30 inset-y-0 left-0 w-56 transition duration-300 transform bg-white overflow-y-auto xl:translate-x-0 xl:static xl:inset-0">
             <div class="flex items-center justify-center mt-8">
               <div class="flex items-center">
                 <span class="text-gray-800 text-2xl font-semibold">Dashboard</span>
@@ -42,8 +42,8 @@
           <div class="relative w-full flex flex-col h-screen overflow-x-hidden">
             <!-- Navbar -->
             <header class="flex justify-between items-center p-6">
-              <div class="flex items-center space-x-4 lg:space-x-0">
-                <button @click="sidebarOpen = true" class="text-gray-500 focus:outline-none lg:hidden">
+              <div class="flex items-center space-x-4 xl:space-x-0">
+                <button @click="sidebarOpen = true" class="text-gray-500 focus:outline-none xl:hidden">
                   <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M4 6H20M4 12H20M4 18H11" stroke="currentColor" stroke-width="2"
                     stroke-linecap="round" stroke-linejoin="round" />
