Navbar y Sidebar con Tailwindcss y AlpineJs

--- a/layouts/navbarSdebar.html
+++ b/layouts/navbarSdebar.html
@@ -10,6 +10,7 @@
     <link href="https://tailwindcomponents.com/css/component.dashboard-layout.css" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
+  </head>
   <body class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
     <div>
       <div x-data="{ sidebarOpen: false }">
