--- a/layouts/navbarMerakiui.html
+++ b/layouts/navbarMerakiui.html
@@ -7,11 +7,16 @@
     <title>Sidebar con TailwindCss y Alpine</title>
 
     <link rel="stylesheet" href="styles.css">
-    <link href="https://tailwindcomponents.com/css/component.dashboard-layout.css" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Karla:400,700&display=swap');
+        .font-family-karla { font-family: karla; }
+        .bg-menu { background: #3f729b; }
+    </style>
   </head>
-  <body class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
+  <body class="h-screen overflow-hidden flex items-center justify-center font-family-karla" style="background: #edf2f7;">
     <div x-data="{ sidebarOpen: false }">
       <div class="flex h-screen bg-gray-100 font-roboto">
         <div :class="sidebarOpen ? 'block' : 'hidden'" @click="sidebarOpen = false" class="fixed z-20 inset-0 bg-black opacity-50 xl:hidden"></div>
@@ -36,12 +41,47 @@
             <a href="#"
             class="mt-3 py-2 text-sm text-gray-600 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-100 hover:bg-gray-200 dark:hover:bg-gray-800 rounded">Settings</a>
           </nav>
-        </div>
+        </div><!-- Sidebar -->
 
         <!-- Navbar y Contenido -->
         <div class="relative w-full flex flex-col h-screen overflow-x-hidden">
           <!-- Navbar -->
-          <header class="flex justify-between items-center p-6">
+          <nav class="bg-menu shadow mb-10">
+            <div class="max-w-3xl mx-auto py-3 px-6 md:px-0 md:flex md:justify-between md:items-center">
+              <div x-data="{ sidebarOpen: false }" class="flex justify-between items-center">
+                <div class="flex items-center">
+                  <img src="images/leopardo.jpg" class="h-8 shadow rounded-full" alt="">
+                  <a href="#!" class="text-white text-xl hover:text-gray-700 ml-4">NavBar</a>
+                </div><!-- Imagen -->
+
+                <!-- Mobile menu button -->
+                <div class="flex md:hidden">
+                  <button
+                    type="button"
+                    class="text-white hover:text-red-500 focus:outline-none focus:text-yellow-900"
+                    aria-label="toggle menu"
+                    @click="sidebarOpen = !sidebarOpen"
+                  >
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            
+              <!-- Menu, if mobile set to hidden -->
+              <div :class="sidebarOpen ? 'show' : 'hidden'" class="md:flex items-center mt-4 md:mt-0">
+                <div class="flex flex-col md:flex-row md:ml-6">
+                  <a class="my-1 text-sm text-white font-medium hover:text-indigo-500 md:mx-4 md:my-0" href="#!">Inicio</a>
+                  <a class="my-1 text-sm text-white font-medium hover:text-indigo-500 md:mx-4 md:my-0" href="#!">Acerca</a>
+                  <a class="my-1 text-sm text-white font-medium hover:text-indigo-500 md:mx-4 md:my-0" href="#!">Contactos</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+
+
+          <!-- <header class="flex justify-between items-center p-6">
             <div class="flex items-center space-x-4 xl:space-x-0">
               <button @click="sidebarOpen = true" class="text-gray-500 focus:outline-none xl:hidden">
                 <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -109,7 +149,7 @@
                 </div>
               </div>
             </div>
-          </header>
+          </header> -->
 
           <!-- Contenido -->
           <main class="flex-1 overflow-x-hidden overflow-y-auto">
