--- a/layouts/styles.css
+++ b/layouts/styles.css
@@ -563,11 +563,24 @@ video {
 .relative {
 	position: relative;
 }
+.fixed {
+	position: fixed;
+}
 .inset-0 {
 	top: 0px;
 	right: 0px;
 	bottom: 0px;
 	left: 0px;
+}
+.inset-y-0 {
+	top: 0px;
+	bottom: 0px;
+}
+.left-0 {
+	left: 0px;
+}
+.right-0 {
+	right: 0px;
 }
 .z-10 {
 	z-index: 10;
@@ -575,20 +588,40 @@ video {
 .z-0 {
 	z-index: 0;
 }
+.z-20 {
+	z-index: 20;
+}
+.z-30 {
+	z-index: 30;
+}
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
+.my-1 {
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
+}
 .mt-8 {
 	margin-top: 2rem;
 }
-.mb-3 {
-	margin-bottom: 0.75rem;
+.mb-10 {
+	margin-bottom: 2.5rem;
 }
-.mt-auto {
-	margin-top: auto;
+.ml-4 {
+	margin-left: 1rem;
 }
-.mr-3 {
-	margin-right: 0.75rem;
+.mt-4 {
+	margin-top: 1rem;
 }
-.ml-1 {
-	margin-left: 0.25rem;
+.mt-10 {
+	margin-top: 2.5rem;
+}
+.mt-3 {
+	margin-top: 0.75rem;
+}
+.mt-2 {
+	margin-top: 0.5rem;
 }
 .block {
 	display: block;
@@ -596,11 +629,29 @@ video {
 .flex {
 	display: flex;
 }
+.grid {
+	display: grid;
+}
+.hidden {
+	display: none;
+}
 .h-screen {
 	height: 100vh;
 }
 .h-6 {
 	height: 1.5rem;
+}
+.h-8 {
+	height: 2rem;
+}
+.h-5 {
+	height: 1.25rem;
+}
+.h-9 {
+	height: 2.25rem;
+}
+.h-96 {
+	height: 24rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -608,14 +659,26 @@ video {
 .w-48 {
 	width: 12rem;
 }
-.w-80 {
-	width: 20rem;
-}
-.w-8 {
-	width: 2rem;
-}
 .w-6 {
 	width: 1.5rem;
+}
+.w-56 {
+	width: 14rem;
+}
+.w-full {
+	width: 100%;
+}
+.w-5 {
+	width: 1.25rem;
+}
+.w-9 {
+	width: 2.25rem;
+}
+.max-w-3xl {
+	max-width: 48rem;
+}
+.flex-1 {
+	flex: 1 1 0%;
 }
 .transform {
 	--tw-translate-x: 0;
@@ -627,11 +690,25 @@ video {
 	--tw-scale-y: 1;
 	transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.translate-x-0 {
+	--tw-translate-x: 0px;
+}
 .-translate-x-full {
 	--tw-translate-x: -100%;
 }
-.translate-x-0 {
-	--tw-translate-x: 0px;
+.scale-95 {
+	--tw-scale-x: .95;
+	--tw-scale-y: .95;
+}
+.scale-100 {
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+}
+.flex-col {
+	flex-direction: column;
+}
+.place-items-center {
+	place-items: center;
 }
 .items-center {
 	align-items: center;
@@ -639,36 +716,86 @@ video {
 .justify-between {
 	justify-content: space-between;
 }
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+.justify-center {
+	justify-content: center;
 }
-.rounded {
-	border-radius: 0.25rem;
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(1rem * var(--tw-space-x-reverse));
+	margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+	margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.overflow-hidden {
+	overflow: hidden;
+}
+.overflow-y-auto {
+	overflow-y: auto;
+}
+.overflow-x-hidden {
+	overflow-x: hidden;
 }
 .rounded-md {
 	border-radius: 0.375rem;
 }
-.bg-gray-700 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+.rounded-full {
+	border-radius: 9999px;
+}
+.rounded {
+	border-radius: 0.25rem;
+}
+.border-2 {
+	border-width: 2px;
+}
+.border-purple-500 {
+	--tw-border-opacity: 1;
+	border-color: rgba(139, 92, 246, var(--tw-border-opacity));
 }
 .bg-indigo-900 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(49, 46, 129, var(--tw-bg-opacity));
 }
-.stroke-current {
-	stroke: currentColor;
+.bg-gray-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
+.bg-white {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-gray-100 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+}
+.bg-black {
+	--tw-bg-opacity: 1;
+	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
+}
+.bg-gray-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+.fill-current {
+	fill: currentColor;
+}
+.object-cover {
+	-o-object-fit: cover;
+	   object-fit: cover;
 }
 .p-3 {
 	padding: 0.75rem;
 }
+.p-2 {
+	padding: 0.5rem;
+}
 .p-4 {
 	padding: 1rem;
 }
-.p-2 {
-	padding: 0.5rem;
+.p-6 {
+	padding: 1.5rem;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -682,24 +809,65 @@ video {
 	padding-left: 0.75rem;
 	padding-right: 0.75rem;
 }
+.py-3 {
+	padding-top: 0.75rem;
+	padding-bottom: 0.75rem;
+}
+.px-6 {
+	padding-left: 1.5rem;
+	padding-right: 1.5rem;
+}
+.py-8 {
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+}
+.text-center {
+	text-align: center;
+}
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
+.text-xl {
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
+.text-sm {
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+}
 .font-bold {
 	font-weight: 700;
+}
+.font-medium {
+	font-weight: 500;
+}
+.font-semibold {
+	font-weight: 600;
 }
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
-.text-red-600 {
+.text-gray-800 {
 	--tw-text-opacity: 1;
-	color: rgba(220, 38, 38, var(--tw-text-opacity));
+	color: rgba(31, 41, 55, var(--tw-text-opacity));
 }
-.text-red-700 {
+.text-gray-500 {
 	--tw-text-opacity: 1;
-	color: rgba(185, 28, 28, var(--tw-text-opacity));
+	color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+.text-gray-700 {
+	--tw-text-opacity: 1;
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+.text-gray-600 {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+.text-red-800 {
+	--tw-text-opacity: 1;
+	color: rgba(153, 27, 27, var(--tw-text-opacity));
 }
 .antialiased {
 	-webkit-font-smoothing: antialiased;
@@ -711,14 +879,35 @@ video {
 .opacity-0 {
 	opacity: 0;
 }
-.duration {
+.opacity-50 {
+	opacity: 0.5;
+}
+.shadow {
+	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-xl {
+	--tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.transition {
+	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
 .duration-200 {
 	transition-duration: 200ms;
 }
-.ease {
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.duration-300 {
+	transition-duration: 300ms;
+}
+.duration-100 {
+	transition-duration: 100ms;
+}
+.duration-75 {
+	transition-duration: 75ms;
 }
 .ease-in {
 	transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
@@ -726,29 +915,106 @@ video {
 .ease-out {
 	transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
+.container {
+	width: 100%;
+}
+@media (min-width: 640px) {
+
+	.container {
+		max-width: 640px;
+	}
+}
+@media (min-width: 768px) {
+
+	.container {
+		max-width: 768px;
+	}
+}
+@media (min-width: 1024px) {
+
+	.container {
+		max-width: 1024px;
+	}
+}
+@media (min-width: 1280px) {
+
+	.container {
+		max-width: 1280px;
+	}
+}
+@media (min-width: 1536px) {
+
+	.container {
+		max-width: 1536px;
+	}
+}
 .hover\:bg-indigo-800:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 48, 163, var(--tw-bg-opacity));
-}
-.hover\:bg-gray-800:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 .hover\:bg-gray-600:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
 }
+.hover\:bg-gray-200:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+.hover\:bg-purple-600:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(124, 58, 237, var(--tw-bg-opacity));
+}
+.hover\:text-gray-700:hover {
+	--tw-text-opacity: 1;
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
+.hover\:text-gray-600:hover {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+.hover\:text-indigo-500:hover {
+	--tw-text-opacity: 1;
+	color: rgba(99, 102, 241, var(--tw-text-opacity));
+}
+.hover\:text-white:hover {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.hover\:text-red-600:hover {
+	--tw-text-opacity: 1;
+	color: rgba(220, 38, 38, var(--tw-text-opacity));
+}
+.hover\:text-red-900:hover {
+	--tw-text-opacity: 1;
+	color: rgba(127, 29, 29, var(--tw-text-opacity));
+}
+.hover\:text-red-200:hover {
+	--tw-text-opacity: 1;
+	color: rgba(254, 202, 202, var(--tw-text-opacity));
+}
+.hover\:text-red-500:hover {
+	--tw-text-opacity: 1;
+	color: rgba(239, 68, 68, var(--tw-text-opacity));
+}
 .focus\:bg-indigo-800:focus {
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 48, 163, var(--tw-bg-opacity));
 }
-.focus\:bg-gray-800:focus {
-	--tw-bg-opacity: 1;
-	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
-}
 .focus\:bg-gray-600:focus {
 	--tw-bg-opacity: 1;
 	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}
+.focus\:text-gray-600:focus {
+	--tw-text-opacity: 1;
+	color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+.focus\:text-yellow-600:focus {
+	--tw-text-opacity: 1;
+	color: rgba(217, 119, 6, var(--tw-text-opacity));
+}
+.focus\:text-yellow-900:focus {
+	--tw-text-opacity: 1;
+	color: rgba(120, 53, 15, var(--tw-text-opacity));
 }
 .focus\:outline-none:focus {
 	outline: 2px solid transparent;
@@ -756,9 +1022,62 @@ video {
 }
 @media (min-width: 640px) {
 
+	.sm\:block {
+		display: block;
+	}
+
 	.sm\:text-3xl {
 		font-size: 1.875rem;
 		line-height: 2.25rem;
+	}
+}
+@media (min-width: 768px) {
+
+	.md\:mx-4 {
+		margin-left: 1rem;
+		margin-right: 1rem;
+	}
+
+	.md\:my-0 {
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
+
+	.md\:mt-0 {
+		margin-top: 0px;
+	}
+
+	.md\:ml-6 {
+		margin-left: 1.5rem;
+	}
+
+	.md\:block {
+		display: block;
+	}
+
+	.md\:flex {
+		display: flex;
+	}
+
+	.md\:hidden {
+		display: none;
+	}
+
+	.md\:flex-row {
+		flex-direction: row;
+	}
+
+	.md\:items-center {
+		align-items: center;
+	}
+
+	.md\:justify-between {
+		justify-content: space-between;
+	}
+
+	.md\:px-0 {
+		padding-left: 0px;
+		padding-right: 0px;
 	}
 }
 @media (min-width: 1024px) {
@@ -785,5 +1104,32 @@ video {
 
 	.lg\:opacity-100 {
 		opacity: 1;
+	}
+}
+@media (min-width: 1280px) {
+
+	.xl\:static {
+		position: static;
+	}
+
+	.xl\:inset-0 {
+		top: 0px;
+		right: 0px;
+		bottom: 0px;
+		left: 0px;
+	}
+
+	.xl\:hidden {
+		display: none;
+	}
+
+	.xl\:translate-x-0 {
+		--tw-translate-x: 0px;
+	}
+
+	.xl\:space-x-0 > :not([hidden]) ~ :not([hidden]) {
+		--tw-space-x-reverse: 0;
+		margin-right: calc(0px * var(--tw-space-x-reverse));
+		margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
 	}
 }
