Navbar con Tailwindcss y AlpineJs

--- a/layouts/styles.css
+++ b/layouts/styles.css
@@ -1016,6 +1016,10 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(120, 53, 15, var(--tw-text-opacity));
 }
+.focus\:text-white:focus {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
 .focus\:outline-none:focus {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
