Sidebar responsive con Tailwind CSS y y Alpine JS

--- a/layouts/navbarSdebar.html
+++ b/layouts/navbarSdebar.html
@@ -7,7 +7,7 @@
     <title>Sidebar con TailwindCss y Alpine</title>
 
     <link rel="stylesheet" href="styles.css">
-    <link href="https://tailwindcomponents.com/css/component.dashboard-layout.css" rel="stylesheet">
+    <!-- <link href="https://tailwindcomponents.com/css/component.dashboard-layout.css" rel="stylesheet"> -->
 
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
   </head>
