--- a/layouts/navbarMerakiui.html
+++ b/layouts/navbarMerakiui.html
@@ -49,34 +49,67 @@
         <div class="relative w-full flex flex-col h-screen overflow-x-hidden">
           <!-- Navbar -->
           <nav class="bg-menu shadow mb-10">
-            <div x-data="{ sidebarOpen: false }" class="max-w-3xl mx-auto py-3 px-6 md:px-0 md:flex md:justify-between md:items-center">
+            <div x-data="{ isOpen: false }" class="max-w-3xl mx-auto py-3 px-6 md:px-0 md:flex md:justify-between md:items-center">
               <div class="flex justify-between items-center">
+                <!-- Sidebar menu button -->
+                <button @click="sidebarOpen = true" class="text-white focus:outline-none xl:hidden">
+                  <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4 6H20M4 12H20M4 18H11" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                </button>
                 <div class="flex items-center">
                   <img src="images/leopardo.jpg" class="h-8 shadow rounded-full" alt="">
-                  <a href="#!" class="text-white text-xl hover:text-gray-700 ml-4">NavBar</a>
+                  <a href="#!" class="text-white text-xl hover:text-indigo-200 ml-4">NavBar</a>
                 </div><!-- Imagen -->
 
                 <!-- Mobile menu button -->
                 <div class="flex md:hidden">
                   <button
                     type="button"
-                    class="text-white hover:text-white focus:outline-none focus:text-white"
+                    class="text-white text-4xl hover:text-white focus:outline-none focus:text-white"
                     aria-label="toggle menu"
-                    @click="sidebarOpen = !sidebarOpen"
+                    @click="isOpen = !isOpen"
                   >
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                     </svg>
                   </button>
                 </div>
               </div>
 
               <!-- Menu, if mobile set to hidden -->
-              <div :class="sidebarOpen ? 'show' : 'hidden'" class="md:flex items-center mt-4 md:mt-0">
+              <div :class="isOpen ? 'show' : 'hidden'" class="md:flex items-center mt-4 md:mt-0">
                 <div class="flex flex-col md:flex-row md:ml-6">
-                  <a class="my-1 text-sm text-white font-medium hover:text-indigo-500 md:mx-4 md:my-0" href="#!">Inicio</a>
-                  <a class="my-1 text-sm text-white font-medium hover:text-indigo-500 md:mx-4 md:my-0" href="#!">Acerca</a>
-                  <a class="my-1 text-sm text-white font-medium hover:text-indigo-500 md:mx-4 md:my-0" href="#!">Contactos</a>
+                  <a class="my-1 text-white font-medium hover:text-indigo-200 md:mx-4 md:my-0" href="#!">Inicio</a>
+                  <a class="my-1 text-white font-medium hover:text-indigo-200 md:mx-4 md:my-0" href="#!">Acerca</a>
+                  <a class="my-1 text-white font-medium hover:text-indigo-200 md:mx-4 md:my-0" href="#!">Contactos</a>
+                </div>
+              </div>
+
+              <div x-data="{ dropdownOpen: false }" class="relative">
+                <button @click="dropdownOpen = ! dropdownOpen" class="flex items-center space-x-2 relative focus:outline-none">
+                  <h2 class="text-white font-medium hover:text-indigo-200 hidden sm:block">Super Admin</h2>
+                    <img class="h-9 w-9 rounded-full border-2 border-purple-500 object-cover"
+                    src="https://images.unsplash.com/photo-1553267751-1c148a7280a1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                    alt="Your avatar">
+                </button>
+
+                <div class="absolute right-0 mt-2 w-48 bg-white rounded-md overflow-hidden shadow-xl z-10"
+                  x-show="dropdownOpen"
+                  x-transition:enter="transition ease-out duration-100 transform"
+                  x-transition:enter-start="opacity-0 scale-95"
+                  x-transition:enter-end="opacity-100 scale-100"
+                  x-transition:leave="transition ease-in duration-75 transform"
+                  x-transition:leave-start="opacity-100 scale-100"
+                  x-transition:leave-end="opacity-0 scale-95"
+                  @click.away="dropdownOpen = false">
+                  <a href="#"
+                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-purple-600 hover:text-white">Profile</a>
+                  <a href="#"
+                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-purple-600 hover:text-white">Tickets</a>
+                  <a href=""
+                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-purple-600 hover:text-white">Logout</a>
                 </div>
               </div>
             </div>
